--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<inceptionYear>2011</inceptionYear>
 	<groupId>com.labimo.fs</groupId>
 	<artifactId>fswalker</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3</version>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -58,6 +58,11 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.dizitart</groupId>
+			<artifactId>nitrite</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -87,7 +92,7 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
-				<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>3.2.1</version>
@@ -115,5 +120,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 </project>
